test/link/script-overflowing-sect.out
error: The linker script assigns section "ROM2 1" to address $8000, but then it would overflow ROMX by 1 byte
    at script-overflowing-sect.link(5)
Linking failed with 1 error
